ch8/ch8-uppercasing-exercise/builder-usage/tests/fails/wrong_type.rs
use builder_macro::Builder;

#[derive(Builder)]
struct Gleipnir {
    #[uppercase]
    roots_of: i32,
}

fn main() {}
