ch8/ch8-uppercasing-exercise/builder-usage/tests/fails/wrong_type.stderr
error: Can only use uppercase for String type
 --> tests/fails/wrong_type.rs:6:5
  |
6 |     roots_of: i32,
  |     ^^^^^^^^
